# ripp-ui

./: CLAUDE.md  Cargo.toml  GUIDESIGN.md  Makefile  README.md  STRUCTS.md
assets/: index.html
assets/shaders/: teapot.wgsl  viewer2d.wgsl
src/: app.rs  app_logic.rs  camera.rs  lib.rs  main.rs  micromanager.rs  renderer2d.rs  renderer3d.rs  server.rs  session.rs  sim_adapter.rs  teapot.rs  viewer2d.rs
src/panes/: cam_prop.rs  camera_view.rs  file_browser.rs  help.rs  mod.rs  pan_scan.rs  particle_tracking.rs  plots.rs  project.rs  right_bottom.rs  right_top.rs  tabs.rs  viewer2d.rs  viewer3d.rs
ui/: app.slint  types.slint
ui/panels/: left_pane.slint  pane_cam_prop.slint  pane_camera.slint  pane_file_browser.slint  pane_help.slint  pane_pan_scan.slint  pane_particle_tracking.slint  pane_plots.slint  pane_project.slint  pane_viewer2d.slint  pane_viewer3d.slint  right_panes.slint
ui/widgets/: dynamic_pane.slint  range_slider.slint
