[package]
name = "ripp"
version = "0.1.0"
edition = "2021"

[dependencies]
slint    = "1"
glam     = "0.29"
bytemuck = { version = "1.16", features = ["derive"] }
tobj     = { version = "4" }

# Web server binary
actix-web = "4"
actix-ws  = "0.3"
serde_json = "1"
bytes     = "1"
futures   = "0.3"
png       = "0.17"
serde     = { version = "1", features = ["derive"] }
tokio     = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
wgpu      = "0.19"

[build-dependencies]
slint-build = "1"
